fix default profile picture on mobile

--- a/src/pages/Account/account.scss
+++ b/src/pages/Account/account.scss
@@ -62,7 +62,8 @@
             padding: 1.7em 2.5em;
         }
 
-        .account__user_photo {
+        .account__user_photo,
+        .user_info__default {
             width: 6em;
             height: 6em;
         }
